--- a/_posts/0000-01-02-rklearn.md
+++ b/_posts/0000-01-02-rklearn.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-First creation of a file.
+This line has been changed.
 Use the left arrow to go back!
